# Plataforma-Hyperion

./: .dockerignore  .env.contabo.example  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.contabo.yml  docker-compose.dev.yml  docker-compose.test.yml  eslint.config.mjs  logs-gw.txt  logs-identity.txt  logs-iris.txt  logs-tenant.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  security.md
.github/workflows/: _cell-ci.yml  _lumen-database.yml  _pulso-database.yml  access-channel-projection.yml  architecture-ci.yml  build-attested-cell-images.yml  check.yml  codeql.yml  container-scan.yml  dependency-audit.yml  gitleaks.yml  legacy-monolith-diagnostic.yml  lumen.yml  nova.yml  platform.yml  publish-provider-contracts.yml  publish-release.yml  publish-shared-libraries.yml  pulso.yml
apps/api-gateway/: package.json
apps/coopfuturo-console/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  MODULES.md  README.md  next.config.ts  package-lock.json  package.json
apps/documents/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/documents/alembic/: env.py
apps/documents/src/documents_app/: main.py  runtime.py  settings.py
apps/documents/src/documents_app/routers/: tech.py
apps/handoff-liwa/: .env.example  Dockerfile  README.md  pyproject.toml
apps/handoff-liwa/alembic/: env.py
apps/handoff-liwa/alembic/versions/: 0001_technical.py
apps/handoff-liwa/src/handoff_liwa/: main.py  runtime.py  settings.py
apps/handoff-liwa/src/handoff_liwa/routers/: tech.py
apps/lumen-bff/: README.md  package.json
apps/lumen-console/: index.html  package.json  tsconfig.json  vite.config.ts
apps/nova-bff/: package.json
apps/pilot-core/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
apps/pilot-core/alembic/: env.py
apps/pilot-core/src/pilot_core/: main.py  ops_auth.py  ops_store.py  phone.py  runtime.py  settings.py
apps/pilot-core/src/pilot_core/fixtures/ops/: campaigns.json  crm.json
apps/pilot-core/src/pilot_core/modules/: __init__.py  activity.py  dialer_safety.py  documents_service.py  elevenlabs_conversations.py  elevenlabs_outbound.py  lead_context.py  liwa_inbound.py  liwa_whatsapp.py  object_storage.py  pii.py  product_flow.py  whatsapp_mock.py
apps/pilot-core/src/pilot_core/modules/agent_config/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/analytics/: __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/analytics_projection/: README.md  __init__.py
apps/pilot-core/src/pilot_core/modules/campaigns/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/compliance/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/contacts/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/core_adapter/: __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/crm/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/orchestration/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/modules/post_call/: __init__.py  service.py  watcher.py
apps/pilot-core/src/pilot_core/modules/segmentation/: README.md  __init__.py  service.py
apps/pilot-core/src/pilot_core/routers/: ops.py  tech.py
apps/whatsapp-adapter/: .env.example  Dockerfile  README.md  pyproject.toml
apps/whatsapp-adapter/alembic/: env.py  script.py.mako
apps/whatsapp-adapter/src/whatsapp_adapter/: main.py  runtime.py  settings.py
apps/whatsapp-adapter/src/whatsapp_adapter/routers/: tech.py
contracts/: CHANGELOG.md  README.md
design/: CHECKLIST.md  COMPONENT_INVENTORY.md  COPY_GUIDE.md  GRID.md  ICON_GUIDE.md  QA.md  STATE_GUIDE.md  UX_RULES.md
docs/: ADR-001-dialer-boundary.md  ADR-002-autonomous-services.md  ADR-003-orchestrator-sagas.md  ADR-004-channel-adapters.md  ADR-005-modular-first.md  ARCHITECTURE.md  BRANCH_POLICY.md  DEMO_PULSO_LOCAL.md  EXTERNAL_BLOCKERS.md  FEDERATION-ACCEPTANCE.md  OWNERSHIP_REQUEST.md  PRODUCTION.md  PRODUCT_BACKLOG.md  SECURITY_EXCEPTIONS.md  anti-patterns.md  architecture.md  data-ownership-matrix.md  event-registry.md  service-ownership.md
infra/: README.md  access-ops.env.example  audit-ops.env.example  compatibility-policy.json  docker-compose.access-ops.yml  docker-compose.audit-ops.yml  docker-compose.compatibility-ci.yml  docker-compose.contabo-test.yml  docker-compose.dialer.yml  docker-compose.hostname-edge.yml  docker-compose.jetstream.yml  docker-compose.liwa-tunnel.yml  docker-compose.lumen-crash-ci.yml  docker-compose.lumen-ops.yml  docker-compose.lumen.yml  docker-compose.n-minus-one-roles-ci.yml  docker-compose.nova-ops.yml  docker-compose.nova-platform.acceptance.yml  docker-compose.nova.acceptance.yml  docker-compose.nova.yml  docker-compose.platform-nova.acceptance.yml  docker-compose.platform.yml  docker-compose.pulso-ops.yml  docker-compose.pulso.yml  docker-compose.yml  lumen.env.example  nova-ops.env.example  nova.env.example  platform.env.example  pulso-ops.env.example  pulso-whatsapp-snapshot-images.v1.txt  pulso.env.example
releases/: README.md
scripts/: publish-architecture-foundation.ps1
services/: README.md
(+1167 files in other folders)
