[project]
name = "documents"
version = "0.2.0"
description = "Coopfuturo documents deployable unit"
requires-python = ">=3.12"
dependencies = ["platform-kit"]

[tool.uv.sources]
platform-kit = { path = "../../packages/platform-kit", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["documents_app"]

[tool.hatch.build.targets.wheel.sources]
"src/documents_app" = "documents_app"
