[project]
name = "whatsapp-adapter"
version = "0.2.0"
description = "Coopfuturo whatsapp-adapter deployable unit"
requires-python = ">=3.12"
dependencies = ["platform-kit"]

[tool.uv.sources]
platform-kit = { path = "../../packages/platform-kit", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatsapp_adapter"]
